# FastVoxels

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Assets/: monkey.glb
Data/: Church.toml  NewYorkCity.toml  OperationRoom.toml  cavern.vox  config.toml  cyberpunk.vox  nyc.toml
Include/VoxLoader/: VoxLoader.h
Scripts/: ProcessPerformanceData.py  vox-conv.py  voxelizer.py
Shaders/: AxisAlignedIntersection.hlsl  BasicShader.hlsl  CommonShaders.hlsl  DistanceFieldIntersection.hlsl  Hit.hlsl  Intersection.hlsl  NotOptimized.hlsl  Optimized.hlsl  Ray.hlsl  Shader.hlsl  Structs.hlsl
Shaders/Common/: Common.hlsl  Random.hlsl  Ray.hlsl  Resources.hlsl  Sampling.hlsl
Source/: AABBBuilder.cpp  AABBBuilder.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Common.cpp  Common.h  FileRead.h  HelloTriangle.cpp  ShaderCompiler.cpp  ShaderCompiler.h  SimpleTimer.cpp  SimpleTimer.h  VoxelApp.cpp  VoxelApp.h  main.cpp  ogt_vox.h
Source/AxisAlignedIntersection/: AxisAlignedIntersection.cpp  AxisAlignedIntersection.h
Source/Base/: Application.cpp  Application.h  Camera.cpp  Common.h  FileRead.h  MeshLoader.cpp  MeshLoader.h  ShaderCompiler.cpp
Source/DistanceFieldIntersection/: DistanceFieldIntersection.cpp  DistanceFieldIntersection.h
Source/FastVoxels/: main.cpp
